--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,52 @@
+agora_token_builder==1.0.0
 asgiref==3.9.1
+async-timeout==5.0.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+bidict==0.23.1
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==1.17.1
+channels==4.3.1
+channels_redis==4.3.0
+charset-normalizer==3.4.2
+click==8.2.1
+constantly==23.10.4
+cryptography==45.0.6
+daphne==4.2.1
 Django==5.2.5
+django-cors-headers==4.7.0
 django-environ==0.12.0
+django-redis==6.0.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+google-auth==2.40.3
+h11==0.16.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+msgpack==1.1.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 PyJWT==2.10.1
+pyOpenSSL==25.1.0
+pyotp==2.9.0
+python-engineio==4.12.2
+python-socketio==5.13.0
+redis==6.4.0
+requests==2.32.4
+rsa==4.9.1
+service-identity==24.2.0
+simple-websocket==1.1.0
 sqlparse==0.5.3
+tomli==2.2.1
+Twisted==25.5.0
+txaio==25.6.1
 typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+wsproto==1.2.0
+zope.interface==7.2
